--- a/style.css
+++ b/style.css
@@ -117,3 +117,46 @@ h1 {
 .label-score {
   margin-bottom: 2rem;
 }
+@media (max-width: 575px) {
+  body {
+    font-family: sans-serif;
+  }
+  .btn:hover {
+    background-color: orange;
+    border-radius: 2px 50%;
+    border-style: hidden;
+    border-color: red;
+    border: 2px;
+  }
+  .between {
+    font-size: 1.4rem;
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+  }
+  .guess {
+    background: none;
+    border: 4px solid #eee;
+    font-family: inherit;
+    color: inherit;
+    font-size: 3em;
+    padding: 2.5rem;
+    width: 10rem;
+    text-align: center;
+    display: block;
+    margin-bottom: 3rem;
+  }
+  .guess:hover {
+    background-color: orange;
+    border-radius: 50%;
+    border-style: hidden;
+    border: 4px solid red;
+  }
+  .between {
+    font-size: 2rem;
+    position: absolute;
+    top: 4rem;
+    right: 2rem;
+    color: red;
+  }
+}
