--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap');
-
 * {
   margin: 0;
   padding: 0;
@@ -19,6 +18,7 @@ body {
 }
 
 /* LAYOUT */
+
 header {
   position: relative;
   height: 35vh;
@@ -46,12 +46,13 @@ main {
 }
 
 /* ELEMENTS STYLE */
+
 h1 {
   font-size: 4rem;
   text-align: center;
   position: absolute;
   width: 100%;
-  top: 52%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -67,6 +68,31 @@ h1 {
   bottom: 0;
   left: 50%;
   transform: translate(-50%, 50%);
+  animation-name: example;
+  /* animation-duration: 0.1s; */
+  animation-iteration-count: infinite;
+}
+
+@keyframes example {
+  from {
+    background-color: pink;
+    left: 0px;
+  }
+  to {
+    background-color: yellow;
+    left: 100%;
+  }
+}
+
+.againSt {
+  /* animation-name: example2; */
+  /* animation-duration: 01s; */
+  position: fixed;
+  /* bottom: 2rem; */
+  top: 2rem;
+  left: 2rem;
+  /* animation-iteration-count: infinite; */
+  border-radius: 50%;
 }
 
 .between {
@@ -74,12 +100,6 @@ h1 {
   position: absolute;
   top: 2rem;
   right: 2rem;
-}
-
-.again {
-  position: absolute;
-  top: 2rem;
-  left: 2rem;
 }
 
 .guess {
@@ -106,7 +126,7 @@ h1 {
 }
 
 .btn:hover {
-  background-color: #ccc;
+  background-color: orange;
 }
 
 .message {
@@ -117,6 +137,11 @@ h1 {
 .label-score {
   margin-bottom: 2rem;
 }
+
+.agEnd {
+  display: none;
+}
+
 @media (max-width: 575px) {
   body {
     font-family: sans-serif;
@@ -152,6 +177,9 @@ h1 {
     border-style: hidden;
     border: 4px solid red;
   }
+  .guess:visited {
+    background-color: rgb(202, 201, 199);
+  }
   .between {
     font-size: 2rem;
     position: absolute;
@@ -159,23 +187,18 @@ h1 {
     right: 2rem;
     color: red;
   }
-   header {
+  header {
     height: 50vh;
   }
-  h1{
-    font-size:3rem;
-  }
-  .number{
-    font-size:5rem;
-    border-radius:50%;
+  h1 {
+    font-size: 3rem;
   }
   .message {
-  margin-bottom: 4rem;
-  height: 3rem;
-  display: inline-block;
+    margin-bottom: 4rem;
+    height: 3rem;
+    display: inline-block;
   }
   .label-score {
-  margin-top: 2rem;
+    margin-top: 2rem;
+  }
 }
-}
-  
